--- a/IREC-Hyperion Documentation/Hyperion Protocol/HyperionProtocol.tex
+++ b/IREC-Hyperion Documentation/Hyperion Protocol/HyperionProtocol.tex
@@ -6,7 +6,7 @@
 
 \title{RIT SPEX Hyperion Protocol}
 \date{February 1, 2018}
-\author{Dylan R. Wagner}
+\author{Dylan R. Wagner, Alec Herbert, Chris Johnson}
 
 \begin{document}
   \pagenumbering{gobble}
@@ -56,9 +56,9 @@
   0     & No Data \\
   1     & LSM9DS1     \\
   2     & BME280        \\
-  3     & ...        \\
-  4     &         \\
-  5     &         \\
+  3     & CCS811        \\
+  4     & PerfectFlite Strato Logger       \\
+  5     & ...        \\
   6     &         \\
   7     &         \\
   8     &         \\
@@ -110,13 +110,63 @@
   \end{table}
 
   \subsection{BME280}
-  This section will define the data frame for the BME280 data group. The BME280 data group contains information regarding atmospheric temperature, pressure and humidity. In total, this data frame will be 12 bytes in size.
+  This section will define the data frame for the BME280 data group. The BME280 data group contains information regarding atmospheric temperature, pressure and humidity. In total, this data frame will be 16 bytes in size.
   \subsubsection{BME280 Data}
   \paragraph{Temperature (4 bytes)}
   The temperature section of the BME280 data frame will store the atmospheric temperature in degrees Celsius. In total, the temperature section will be 4 bytes.
   \paragraph{Pressure (4 bytes)}
   The pressure section of the BME280 data frame will store the atmospheric pressure in kPa. In total, the pressure section will be 4 bytes.
-  \subsection{Data Group 3}
+  \paragraph{Humidity (4 bytes)}
+  The humidity section of the BME280 data frame will store the atmospheric humidity by percentage. In total, the humidity section will be 4 bytes.
+  \paragraph{BME\_Altitude (4 bytes)}
+  The Altitude section of the BME280 data frame will store the altitude derived by pressure. In total, the BME\_Altitude section will be 4 bytes.
+  \subsubsection{Visualization}
   
+  \begin{table}[H]
+  \centering
+  \caption{BME280 Data Group}
+  \label{my-label}
+  \begin{tabular}{|l|l|}
+  \hline
+Temperature (4 bytes) & Pressure (4 bytes)      \\ \hline
+Humidity (4 bytes)    & BME\_Altitude (4 bytes) \\ \hline
+  \end{tabular}
+  \end{table}
+  
+  \subsection{CCS811}
+  This section will define the data frame for the the CCS811 data group. The CCS811 data group contains information regarding atmospheric composition. In,      total, this data frame will be 4 bytes in size.
+  \subsubsection{CCS811 Data}
+  \paragraph{Total Volatile Organic Compounds (2 Bytes)}
+  The Total Volatile Organic Compounds section of the CCS811 data frame will store the total volatile organic compounds in ppm. In total, this section will be 2 bytes.
+  \paragraph{Equivalent Carbon Dioxide (2 Bytes)}
+  The Equivalent Carbon Dioxide section of the CCS811 data frame will store the equivalent carbon dioxide in ppm. In total, this section will be 2 bytes in size.
+  \subsubsection{Visualization}
+  
+  \begin{table}[H]
+  \centering
+  \caption{CCS811 Data Frame}
+  \label{my-label}
+  \begin{tabular}{|l|l|}
+  \hline
+VOC (2 bytes) & ECD (2 bytes) \\ \hline 
+  \end{tabular}
+  \end{table}
+
+  \subsection{PerfectFlite Strato Logger}
+  This section will define the data frame for the Strato Logger data group. The Strato Logger data group provides accurate information regarding altitude. In total, this data group will be 2 bytes in size.
+  \subsubsection{Strato Logger Data}
+  \paragraph{Altitude (2 bytes)}
+  The Altitude section of the Strato Logger data group will store the altitude in meters. In total, this data section will be 2 bytes in size.
+  
+  \subsubsection{Visualization}
+  \begin{table}[H]
+  \centering
+  \caption{PerfectFlite Strato Logger Data Group}
+  \label{my-label}
+  \begin{tabular}{|l|}
+  \hline
+Altitude (2 bytes) \\ \hline
+ \end{tabular}
+ \end{table}
   
 \end{document}
