--- a/IREC-Hyperion Documentation/Hyperion Protocol/HyperionProtocol.tex
+++ b/IREC-Hyperion Documentation/Hyperion Protocol/HyperionProtocol.tex
@@ -187,23 +187,23 @@ Altitude (2 bytes) \\ \hline
  \pagebreak
   
   \subsection{Orientation}
-  This section will define the data frame for the Orientation data group. The Orientation data group will contain calculations for Roll, Pitch and Yaw. In total, this data group will be 3 bytes in size. In order to achieve one byte per data segment, the values must be scaled down by (1.41). This will allow a signed value of maximum size 127.
+  This section will define the data frame for the Orientation data group. The Orientation data group will contain calculations for Roll, Pitch and Yaw. In total, this data group will be 4 bytes in size. Values will be 9 bits in length with the signed bits being stored within the first byte. 
   \subsubsection{Orientation Data}
-  \paragraph{Roll (1 byte)}
-  The Roll section of the Orientation data group will store the Roll from range -180(scaled) to 180(scaled) (0 to 360 degrees).
-  \paragraph{Pitch (1 byte)}
-  The Pitch section of the Orientation data group will store the Pitch from range -90(scaled) to 90(scaled) (0 to 180 degrees).  
-  \paragraph{Yaw (1 byte)}
-  The Yaw section of the Orientation data group will store the Yaw from range -180(scaled) to 180(scaled) (0 to 360 degrees).  
+  \paragraph{Roll (9 bits)}
+  The Roll section of the Orientation data group will store the Roll from range -180 to 180 (0 to 360 degrees).
+  \paragraph{Pitch (9 bits)}
+  The Pitch section of the Orientation data group will store the Pitch from range -90 to 90 (0 to 180 degrees).  
+  \paragraph{Yaw (9 bits)}
+  The Yaw section of the Orientation data group will store the Yaw from range -180 to 180 (0 to 360 degrees).  
   
   \subsubsection{Visualization}
   \begin{table}[H]
   \centering
   \caption{Orientation Data Group}
   \label{Orientation}
-  \begin{tabular}{|l|l|l|}
+  \begin{tabular}{|l|l|l|l|}
   \hline
-Roll(1 byte) & Pitch(1 byte) & Yaw(1 byte) \\ \hline
+Signed(1 byte) & Roll(1 byte) & Pitch(1 byte) & Yaw(1 byte) \\ \hline
   \end{tabular}
   \end{table}
   
@@ -225,6 +225,14 @@ Roll(1 byte) & Pitch(1 byte) & Yaw(1 byte) \\ \hline
   \end{tabular}
   \end{table}
   
+  \pagebreak
+  
+  \subsection{Info Messages}
+  This section will outline the anatomy of a info message data frame. This data frame has no defined length, only a length of greater than 3 bytes.
+  
+  \subsubsection{Data}
+  Data attached to this frame will be stored in the form of a string. This string has no defined length. However it will be less than the maximum length of transmitted packets defined by the communication device.
+   
   \lfoot{Latest Revision: \today}
   
   
